[FEATURE][WED-27] Fix start over miss-alignment

--- a/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_customization-experience-desktop.scss
+++ b/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_customization-experience-desktop.scss
@@ -15,7 +15,6 @@
     margin-bottom: 25px;
 
     .title-text {
-      max-width: 240px;
       text-align: left;
     }
 
